--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Imran Khan | Personal Website</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/zoom.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
@@ -13,7 +14,6 @@
       href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="imgstyle.css" />
   </head>
   <body>
     <section class="top">
@@ -60,7 +60,7 @@
       <!-- The Modal -->
       <div id="myModal" class="modal">
         <span class="close">&times;</span>
-        <img class="modal-content" id="img-1" />
+        <img class="modal-content" id="img-container" />
         <div id="caption"></div>
       </div>
     </section>
@@ -86,8 +86,10 @@
       </div>
     </section>
     <footer>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+      <p>
+        &copy; Imran Khan 2021, a Programming Hero initiative.
+      </p>
     </footer>
-    <script src="./imgstyle.js"></script>
+    <script src="./js/zoom.js"></script>
   </body>
 </html>
