body width changed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <section class="top">
-      <div class="half-width">
+      <div class="half-width new-style">
         <h1>Hello I'm</h1>
         <h1 id="pink-text">Imran Khan</h1>
         <p>
