Client area new style

--- a/index.html
+++ b/index.html
@@ -67,18 +67,45 @@
     <section class="about-us">
       <div class="ab-div">
         <h2>What Client are say</h2>
-        <div class="whosays">
-          <h3>Bruce Moccy</h3>
-          <p class="ceo-text-style">Founder & CEO Alies</p>
-        </div>
+        <div class="border"></div>
+        <div class="flex-container">
+          <div class="cm-style">
+            <div class="whosays">
+              <h3>Bruce Moccy</h3>
+              <p class="ceo-text-style">Founder & CEO Alies</p>
+            </div>
 
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus,
-          quasi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
-          amet eligendi itaque laborum fugiat quis perferendis earum temporibus
-          nam, quae sequi at officiis adipisci aut officia obcaecati quam ad
-          harum.
-        </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Doloribus, quasi? Lorem ipsum dolor sit amet consectetur
+              adipisicing elit.
+            </p>
+          </div>
+          <div class="cm-style">
+            <div class="whosays">
+              <h3>Bruce Moccy</h3>
+              <p class="ceo-text-style">Founder & CEO Alies</p>
+            </div>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Doloribus, quasi? Lorem ipsum dolor sit amet consectetur
+              adipisicing elit.
+            </p>
+          </div>
+          <div class="cm-style">
+            <div class="whosays">
+              <h3>Bruce Moccy</h3>
+              <p class="ceo-text-style">Founder & CEO Alies</p>
+            </div>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Doloribus, quasi? Lorem ipsum dolor sit amet consectetur
+              adipisicing elit.
+            </p>
+          </div>
+        </div>
       </div>
       <div class="card-style">
         <p>Leave me a message in the</p>
