card-style margin-top added

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </div>
       <div class="card-style">
         <p>Leave me a message in the</p>
-        <h3>imran683@gmail.com</h3>
+        <h3>i@gmail.com</h3>
       </div>
     </section>
     <footer>
