--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </div>
       <div class="card-style">
         <p>Leave me a message in the</p>
-        <h3>i@gmail.com</h3>
+        <h3>codingraptor@protonmail.com</h3>
       </div>
     </section>
     <footer>
